--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "undici": "^7.0.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "@polymarket/clob-client": "^5.2.3",
+    "dotenv": "^17.3.1",
+    "ethers": "^6.16.0"
   },
   "engines": {
     "node": ">=18.0.0"
